<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tadumadzerati.calculator.MainActivity" android:baselineAligned="false">


    <LinearLayout
            android:layout_weight="7"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_weight="30"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="127dp">

            <TextView
                    android:textSize="35sp"
                    android:textColor="#000000"
                    android:text="@string/ResultView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resultTextView"/>





        </LinearLayout>

        <LinearLayout
                android:background="#212121"
                android:layout_weight="70"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:baselineAligned="false">

            <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button7"
                        android:text="@string/button7"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button4"
                        android:text="@string/button4"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button1"
                        android:text="@string/button1"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/buttonDot"
                        android:text="@string/buttonDot"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button8"
                        android:text="@string/button8"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button5"
                        android:text="@string/button5"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button2"
                        android:text="@string/button2"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button0"
                        android:text="@string/button0"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>



            </LinearLayout>

            <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <Button
                        android:id="@+id/button9"
                        android:text="@string/button9"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button6"
                        android:text="@string/button6"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/button3"
                        android:text="@string/button3"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                <Button
                        android:id="@+id/buttonEqual"
                        android:text="@string/buttonEqual"
                        android:onClick="buttonsClick"
                        android:textSize="35sp"
                        android:textColor="#FFFFFF"
                        android:background="#212121"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



    <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/buttonDel"
                android:text="@string/buttonDel"
                android:onClick="buttonsClick"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="#E59400"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/buttonDevide"
                android:text="@string/buttonDivide"
                android:onClick="buttonsClick"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="#E59400"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/buttonMultiply"
                android:text="@string/buttonMultiple"
                android:onClick="buttonsClick"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="#E59400"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/buttonMinus"
                android:text="@string/buttonMinus"
                android:onClick="buttonsClick"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="#E59400"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

        <Button
                android:id="@+id/buttonPlus"
                android:text="@string/buttonPlus"
                android:onClick="buttonsClick"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="#E59400"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
    </LinearLayout>


    <LinearLayout

            android:background="#5DAE5D"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_width="20dp"
            android:layout_height="match_parent"
    ></LinearLayout>

</LinearLayout>